2023-10-17 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Harden table title view helper against missing table title, resolves #299
    * Add note about typo3/cms-reactions dependency, references #298

2023-09-17 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Fix compatibility with PHP 7.4, resolves #296
    * Release version 7.1.1

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Allow explicit ordering of columns for processing, resolves #255
    * Verify compatibility with PHP 8.2
    * Release version 7.1.0

2023-08-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Hint at the possibility of combining additional fields and substructure fields for transformations, resolves #292
    * Allow for wildcard without condition in arrayPath property, resolves #291
    * Allow to set fixed value at column configuration-level, resolves #293

2023-07-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible to download imported data during preview runs, resolves #289

2023-07-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Let Scheduler task succeed on warnings for all/grouped tables (thanks to Mathias Brodala)

2023-05-05 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Release version 7.0.0

2023-05-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve event page and add missing Report event, references #279
	* Drop support for old-style Connector Services, resolves #285
	* Reset abort process flag upon each synchronization, references #284

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce webhook in new Report step, resolves #279
	* Make it possible to run steps despite process being aborted, resolves #284

2023-04-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce reaction, resolves #278

2023-04-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce processed configuration, resolves #281

2023-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>
